--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,11 +4,12 @@
 
 body {
 	margin: 0px;
+	background-color: dodgerblue;
 }
 
 nav {
 	width: 100%;
-	background-color: lightgrey;
+	background-color: grey;
 	height: 45px;
 	position: relative;
 }
@@ -33,17 +34,17 @@ a:active {
 }
 
 .store {
-	color: black;
+	color: white;
 	left: 30px;
 }
 
 .post {
-	color: purple;
+	color: white;
 	right: 100px;
 }
 
 .account {
-	color: purple;
+	color: white;
 	right: 10px;
 }
 
@@ -63,4 +64,54 @@ ul.category > li {
 
 ul.category > li > a {
 	color: black;
+}
+
+.middle {
+	width: 400px;
+	padding: 40px 40px;
+	margin: auto;
+	background-color: white;
+	margin-top: 35px;
+}
+
+.signup-form h1 {
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+}
+
+.signup-form label, .signup-form input {
+	display: block;
+	margin-bottom: 20px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.signup-form input, .signup-form button {
+	width: 320px;
+	height: 55px;
+	border: 2px grey solid;
+	padding: 15px 15px;
+}
+
+.signup-form button {
+	font-size: 20px;
+	background-color: grey;
+	color: white;
+	font-family: 'Roboto', sans-serif;
+}
+
+.forgot {
+	display: block;
+	text-align: center;
+	margin-top: 10px;
+	color: grey;
+	font-family: 'Roboto', sans-serif;
+}
+
+h3, h3 a {
+	text-align: center;
+	color: white;
+}
+
+h3 a {
+	color: red;
 }
