--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,31 +68,42 @@ ul.category > li > a {
 
 .middle {
 	width: 400px;
-	padding: 40px 40px;
+	padding: 20px 40px;
 	margin: auto;
 	background-color: white;
 	margin-top: 35px;
 }
 
-.signup-form h1 {
+h1 {
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
 }
 
-.signup-form label, .signup-form input {
+.signin-form label, .signin-form input, .signup-form input, .signup-form select {
 	display: block;
 	margin-bottom: 20px;
 	font-family: 'Roboto', sans-serif;
 }
 
-.signup-form input, .signup-form button {
+.signin-form input, .signin-form button, .signup-form input, .signup-form select, .signup-form button {
 	width: 320px;
 	height: 55px;
 	border: 2px grey solid;
 	padding: 15px 15px;
 }
 
-.signup-form button {
+input.sex {
+	display: inline-block;
+	width: 25px;
+	height: 20px;
+	padding: 0px 0px;
+}
+
+span {
+	font-size: 30px;
+}
+
+.signin-form button, .signup-form button {
 	font-size: 20px;
 	background-color: grey;
 	color: white;
