--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,8 +84,14 @@ h1 {
 	font-family: 'Roboto', sans-serif;
 }
 
-.signin-form label, .signin-form input, .signup-form input, .signup-form select, .postad-form select, .postad-form input, .postad-form textarea, .postad-form label {
+.signin-form input, .signup-form input, .signup-form select, .postad-form select, .postad-form input, .postad-form textarea, .postad-form label {
 	display: block;
+	margin-bottom: 20px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.signin-form label {
+	display: inline-block;
 	margin-bottom: 20px;
 	font-family: 'Roboto', sans-serif;
 }
@@ -104,7 +110,7 @@ input.sex, input.sell {
 	padding: 0px 0px;
 }
 
-span {
+.male, .female {
 	font-size: 30px;
 }
 
@@ -135,17 +141,8 @@ h3 a {
 .product-search input {
 	width: 500px;
 	display: inline-block;
-	margin-left: 320px;
+	margin-left: 420px;
 	text-align: center;
-}
-
-.product-search button {
-	width: 200px;
-	background-color: grey;
-	color: white;
-}
-
-.product-search input, .product-search button {
 	margin-top: 50px;
 	height: 55px;
 	font-family: 'Roboto', sans-serif;
@@ -215,4 +212,34 @@ h3 a {
 
 .redtext {
 	color: red;
+}
+
+/* stylize typeahead.js a la http://twitter.github.io/typeahead.js/css/examples.css */
+.tt-dropdown-menu
+{
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 1px;
+    margin-left: 420px;
+    max-height: 150px;
+    overflow-y: auto;
+    padding: 6px 12px;
+    width: 500px;
+}
+.tt-suggestion.tt-cursor {
+    background-color: #0097cf;
+    color: #fff;
+    cursor: pointer;
+}
+.tt-suggestion p {
+    margin: 0;
+}
+
+.signin-form span, #emailcheck, #namecheck {
+	display: none;
+	font-size: 15px;
+	color: red;
+	margin-bottom: 10px;
+	font-family: 'Roboto', sans-serif;
 }
