--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,9 +9,11 @@ body {
 
 nav {
 	width: 100%;
-	background-color: grey;
-	height: 45px;
-	position: relative;
+	background-color: #232F3E;
+	height: 60px;
+	position: fixed;
+    z-index : 1;
+    top : 0px;
 }
 
 a:link, a:visited {
@@ -26,10 +28,16 @@ a:active {
 	color: red;
 }
 
+.store:hover {
+    text-decoration : none;
+    background-color : black;
+    padding : 10px 10px 10px 10px ;
+}
+
 .store, .post, .account, .dashboard {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	position: absolute;
-	top: 10px;
+	top: 17px;
 	font-size: 20px;
 }
 
@@ -40,7 +48,7 @@ a:active {
 
 .post {
 	color: white;
-	right: 100px;
+	right: 110px;
 }
 
 .account {
@@ -50,7 +58,7 @@ a:active {
 
 .dashboard {
 	color: white;
-	left: 185px;
+	right: 345px;
 }
 
 .category {
@@ -81,19 +89,19 @@ ul.category > li > a {
 
 h1 {
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .signin-form input, .signup-form input, .signup-form select, .postad-form select, .postad-form input, .postad-form textarea, .postad-form label {
 	display: block;
 	margin-bottom: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .signin-form label {
 	display: inline-block;
 	margin-bottom: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .signin-form input, .signin-form button, .signup-form input, .signup-form select, .signup-form button, .postad-form select, .postad-form input, .postad-form textarea, .postad-form button {
@@ -118,7 +126,7 @@ input.sex, input.sell {
 	font-size: 20px;
 	background-color: grey;
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .forgot {
@@ -126,7 +134,7 @@ input.sex, input.sell {
 	text-align: center;
 	margin-top: 10px;
 	color: grey;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 h3, h3 a {
@@ -139,27 +147,39 @@ h3 a {
 }
 
 .product-search input {
-	width: 500px;
+	width: 400px;
 	display: inline-block;
-	margin-left: 420px;
-	text-align: center;
-	margin-top: 50px;
+	margin-left: 300px;
+	text-align: left;
+	margin-top: -32px;
 	height: 55px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	border: 2px grey solid;
+	position : absolute;
 }
 
 .product-search select {
 	display: inline-block;
-	margin-top: 50px;
-	height: 45px;
-	font-family: 'Roboto', sans-serif;
+	margin-top: 100px;
+	height: 55px;
+	font-family: 'Molengo', sans-serif;
 	border: 2px grey solid;
-	width: 300px;
+	width: 320px;
 }
 
 .college {
-	margin-left: 370px;
+	margin-left: 10px;
+}
+
+.categor {
+    margin-left : 10px;
+}
+
+#search-button {
+    display : inline-block;
+    border: 2px grey solid;
+    margin-left : 10px;
+
 }
 
 .display {
@@ -183,21 +203,21 @@ h3 a {
 .title {
 	margin-left: 300px;
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	font-size: 30px;
 	margin-top: 8px;
 }
 
 .description {
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	font-size: 20px;
 	margin-left: 80px;
 }
 
 .contact, .status {
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	font-size: 20px;
 	margin-left: 80px;
 }
@@ -215,13 +235,12 @@ h3 a {
 {
     background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 4px;
     margin-top: 1px;
-    margin-left: 420px;
+    margin-left: 300px;
     max-height: 150px;
     overflow-y: auto;
     padding: 6px 12px;
-    width: 500px;
+    width: 400px;
 }
 .tt-suggestion.tt-cursor {
     background-color: #0097cf;
@@ -237,7 +256,7 @@ h3 a {
 	font-size: 15px;
 	color: red;
 	margin-bottom: 10px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .image img {
@@ -271,7 +290,7 @@ main h2 {
 	line-height: 1.4;
 	font-size: 25px;
 	font-weight: inherit;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .product {
@@ -335,9 +354,9 @@ main .price {
 }
 
 .row {
-	margin-top: 70px;
-	margin-left: 100px;
-	height: 550px;
+	margin-top: 60px;
+	margin-left: 170px;
+	height: 500px;
 }
 
 .item {
@@ -364,11 +383,11 @@ main .price {
 h5 {
 	margin: 0;
 	font-size: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 }
 
 .product-info span {
 	font-size: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	color: white;
 }
