--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,7 +27,7 @@ a:active {
 }
 
 .store, .post, .account, .dashboard {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Molengo', sans-serif;
 	position: absolute;
 	top: 10px;
 	font-size: 20px;
