--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 
 body {
 	margin: 0px;
-	background-color: dodgerblue;
+	background-color: #CEE3F8;
 }
 
 nav {
@@ -54,7 +54,7 @@ a:active {
 
 .account {
 	color: white;
-	right: 15px;
+	right: 25px;
 }
 
 .dashboard {
@@ -153,7 +153,7 @@ h3 a {
 	display: inline-block;
 	margin-left: 350px;
 	text-align: left;
-	margin-top: -32px;
+	margin-top: -35px;
 	height: 55px;
 	font-family: 'Molengo', sans-serif;
 	border: 2px grey solid;
@@ -185,7 +185,7 @@ h3 a {
 	border-radius: 5px;
 	height: 55px;
 	width: 56px;
-	margin-bottom: -23px;
+	margin-bottom: -20px;
 	
 }
 
@@ -315,7 +315,7 @@ main .price {
 	color: white;
 }
 
-.descriptionp, .seller, .date {
+.descriptionp, .seller, .date, .collegep {
     font-size: 24px;
     margin-top: 24px;
     display: -webkit-flex;
@@ -323,7 +323,7 @@ main .price {
     display: flex;
 }
 
-.descriptionp .descriptionh, .seller .sellerh, .date .dateh {
+.descriptionp .descriptionh, .seller .sellerh, .date .dateh , .collegep .collegeh {
     font-weight: 500;
     width: 150px;
     padding-right: 10px;
@@ -331,7 +331,7 @@ main .price {
     float: left;
 }
 
-.descriptionp .descriptionn, .seller .sellern, .date .daten, .seller .sellero {
+.descriptionp .descriptionn, .seller .sellern, .date .daten, .seller .sellero , .collegep .collegen {
     font-weight: 500;
     position: relative;
     display: inline;
